# rentality-legacy

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Deployment.md  Makefile  Pipfile  README.md  TimeSheet.txt  docker-compose.dev.yml  docker-compose.migrate.yml  docker-compose.monitoring.yml  docker-compose.prod-build.yml  docker-compose.prod-dev-1.yml  docker-compose.prod-dev-2.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  post-installation.sh  requirements.txt  setup.sh
src/: .dockerignore  Dockerfile  Dockerfile-development  Pipfile  README.md  build-geo-lib.sh  entrypoint.dev.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  sync.sh  sync_services.sh
src/admin_custom/: admin.py  models.py
src/application/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/billing/: admin.py  models.py
src/blog/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
src/business_core/: admin.py  apps.py  models.py  serializers.py  utils.py  validations.py  views.py
src/business_core_2/: __init__.py
src/cities_custom/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
src/custom_package/: privacy.py
src/elastic_search/: apps.py  models.py  signals.py  urls.py  views.py
src/essentials/: admin.py  models.py  urls.py
src/financials/: admin.py  models.py
src/home_owner/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
src/house/: admin.py  forms.py  helpers.py  models.py  permissions.py  serializer.py  serializers.py  urls.py  utils.py  (+1 more)
(+1287 files in other folders)
